tests/compile_fail/handle_scope_escape_to_nowhere.stderr
error[E0277]: the trait bound `rusty_v8::scope::Scope<'_, rusty_v8::scope::CallbackScope>: rusty_v8::scope_traits::ToLocal<'_>` is not satisfied
  --> $DIR/handle_scope_escape_to_nowhere.rs:7:43
   |
7  |   let _hs = v8::EscapableHandleScope::new(cs.enter());
   |                                           ^^^^^^^^^^ the trait `rusty_v8::scope_traits::ToLocal<'_>` is not implemented for `rusty_v8::scope::Scope<'_, rusty_v8::scope::CallbackScope>`
   | 
  ::: $WORKSPACE/src/handle_scope.rs:71:8
   |
71 |     P: ToLocalOrReturnsLocal<'p>,
   |        ------------------------- required by this bound in `rusty_v8::handle_scope::EscapableHandleScope::new`
   |
   = help: the following implementations were found:
             <rusty_v8::scope::Scope<'s, rusty_v8::function::FunctionCallbackInfo> as rusty_v8::scope_traits::ToLocal<'s>>
             <rusty_v8::scope::Scope<'s, rusty_v8::function::PropertyCallbackInfo> as rusty_v8::scope_traits::ToLocal<'s>>
             <rusty_v8::scope::Scope<'s, rusty_v8::handle_scope::EscapableHandleScope, P> as rusty_v8::scope_traits::ToLocal<'s>>
             <rusty_v8::scope::Scope<'s, rusty_v8::handle_scope::HandleScope, P> as rusty_v8::scope_traits::ToLocal<'s>>
             <rusty_v8::scope::Scope<'s, rusty_v8::scope::ContextScope, P> as rusty_v8::scope_traits::ToLocal<'p>>
   = note: required because of the requirements on the impl of `rusty_v8::scope_traits::ToLocalOrReturnsLocal<'_>` for `rusty_v8::scope::Scope<'_, rusty_v8::scope::CallbackScope>`
